--- a/src/DynamicModules/App.xaml
+++ b/src/DynamicModules/App.xaml
@@ -1,16 +1,16 @@
-﻿<Application x:Class="DM.Demo.App"
+﻿<prism:PrismApplication x:Class="DM.Demo.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:local="clr-namespace:DM.Demo">
-    
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.xaml" />
-                <!--<ResourceDictionary Source="/FirstFloor.ModernUI;component/Assets/ModernUI.Light.xaml" />-->
                 <ResourceDictionary Source="/Styles/CustomUI.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
-    
-</Application>
+
+</prism:PrismApplication>
